test_deploy/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-deploy
  namespace: test-deploy
  labels:
    app.kubernetes.io/name: test-deploy
spec:
  containers:
  - name: test-deploy
    image: dispersia/test-deploy:latest
    ports:
      - containerPort: 3000
        name: http-web-svc
